[gd_scene load_steps=10 format=3 uid="uid://dskxue3uqw2he"]

[ext_resource type="Texture2D" uid="uid://cuce11m0j3lf1" path="res://assets/layers.png" id="1_f6nq1"]
[ext_resource type="Script" path="res://src/Bullets/Arrow.gd" id="1_h8w7f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a0h1e"]
atlas = ExtResource("1_f6nq1")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ay5b"]
atlas = ExtResource("1_f6nq1")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5qcx"]
atlas = ExtResource("1_f6nq1")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d8p8"]
atlas = ExtResource("1_f6nq1")
region = Rect2(16, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_d4pvl"]
animations = [{
"frames": [SubResource("AtlasTexture_a0h1e"), SubResource("AtlasTexture_1ay5b"), SubResource("AtlasTexture_s5qcx")],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [SubResource("AtlasTexture_8d8p8")],
"loop": true,
"name": &"stop",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nb0px"]
size = Vector2(9, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dc47x"]
size = Vector2(9, 1)

[node name="Arrow" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_h8w7f")

[node name="AnimatedSprite2d" type="AnimatedSprite2D" parent="."]
frames = SubResource("SpriteFrames_d4pvl")
animation = &"stop"
playing = true

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_nb0px")

[node name="top_checker" type="Area2D" parent="."]
position = Vector2(0, -2)

[node name="CollisionShape2d" type="CollisionShape2D" parent="top_checker"]
position = Vector2(-0.5, 2.5)
shape = SubResource("RectangleShape2D_dc47x")

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
